<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/background">
	<com.markupartist.android.widget.ActionBar
		android:id="@+id/actionBar" style="@style/ActionBar" />
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout android:id="@+id/tableLayout1"
			android:orientation="vertical" android:padding="15dip"
			android:layout_width="fill_parent" android:layout_height="fill_parent">
			<TextView android:text="@string/ssid" android:textColor="@color/text_color"
				android:layout_width="fill_parent" android:textSize="20dip"
				android:layout_height="wrap_content" />
			<TextView android:id="@+id/txtSSID" android:text=""
				android:textColor="@color/text_color" android:layout_width="fill_parent"
				android:paddingBottom="10dip" android:layout_height="wrap_content" />

			<TextView android:text="@string/bssid" android:textColor="@color/text_color"
				android:layout_width="fill_parent" android:textSize="20dip"
				android:layout_height="wrap_content" />
			<TextView android:id="@+id/txtBSSID" android:text=""
				android:textColor="@color/text_color" android:layout_width="fill_parent"
				android:paddingBottom="10dip" android:layout_height="wrap_content" />

			<TextView android:text="@string/frequency"
				android:textColor="@color/text_color" android:layout_width="fill_parent"
				android:textSize="20dip" android:layout_height="wrap_content" />
			<TextView android:id="@+id/txtFreq" android:text=""
				android:textColor="@color/text_color" android:layout_width="fill_parent"
				android:paddingBottom="10dip" android:layout_height="wrap_content" />

			<TextView android:text="@string/channel" android:textColor="@color/text_color"
				android:layout_width="fill_parent" android:textSize="20dip"
				android:layout_height="wrap_content" />
			<TextView android:id="@+id/txtChan" android:text=""
				android:textColor="@color/text_color" android:layout_width="fill_parent"
				android:paddingBottom="10dip" android:layout_height="wrap_content" />

			<TextView android:text="@string/signal_strength"
				android:textColor="@color/text_color" android:textSize="20dip"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
			<TextView android:id="@+id/txtStrength" android:text=""
				android:textColor="@color/text_color" android:layout_width="fill_parent"
				android:paddingBottom="10dip" android:layout_height="wrap_content" />

			<TextView android:text="@string/encryption"
				android:textSize="20dip" android:textColor="@color/text_color"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
			<TextView android:id="@+id/txtInfo" android:textColor="@color/text_color"
				android:paddingBottom="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />

			<TextView android:text="@string/hidden_ssid" android:id="@+id/lblHiddenSSID" 
				android:textColor="@color/text_color" android:textSize="20dip" android:visibility="gone"
				android:layout_width="fill_parent" android:layout_height="wrap_content" />
			<TextView android:id="@+id/txtHiddenSSID" android:textColor="@color/text_color"
				android:paddingBottom="10dip" android:layout_width="fill_parent" android:visibility="gone"
				android:layout_height="wrap_content" />

			<TextView android:text="@string/link_speed" android:id="@+id/lblLinkSpeed" 
				android:textColor="@color/text_color" android:layout_width="fill_parent" android:visibility="gone"
				android:textSize="20dip" android:layout_height="wrap_content" />
			<TextView android:id="@+id/txtLinkSpeed" android:textColor="@color/text_color"
				android:paddingBottom="10dip" android:layout_width="fill_parent" android:visibility="gone"
				android:layout_height="wrap_content" />

			<TextView android:text="@string/rssi" android:textColor="@color/text_color" android:id="@+id/lblRSSI" 
				android:layout_width="fill_parent" android:textSize="20dip" android:visibility="gone"
				android:layout_height="wrap_content" />
			<TextView android:id="@+id/txtRSSI" android:textColor="@color/text_color"
				android:paddingBottom="10dip" android:layout_width="fill_parent" android:visibility="gone"
				android:layout_height="wrap_content" />

			<TextView android:text="@string/ip_address" android:visibility="gone" android:id="@+id/lblIP" 
				android:textColor="@color/text_color" android:layout_width="fill_parent"
				android:textSize="20dip" android:layout_height="wrap_content" />
			<TextView android:id="@+id/txtIP" android:textColor="@color/text_color" android:visibility="gone"
				android:paddingBottom="10dip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" />

		</LinearLayout>
	</ScrollView>

</LinearLayout>