<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/background">
	<com.markupartist.android.widget.ActionBar
		android:id="@+id/actionBar" style="@style/ActionBar" />
	<TextView android:text="@string/utilities_edittext_label"
		android:textColor="@color/text_color" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:focusable="true"
		android:focusableInTouchMode="true" />
	<EditText android:text="127.0.0.1" android:inputType="textUri"
		android:layout_height="50dip" android:id="@+id/txtAddress"
		android:layout_width="fill_parent" android:nextFocusUp="@+id/txtAddress"
		android:nextFocusLeft="@+id/txtAddress"></EditText>
	<ScrollView android:layout_height="fill_parent"
		android:layout_width="fill_parent">
		<LinearLayout android:orientation="vertical"
			android:layout_height="wrap_content" android:layout_width="fill_parent">
			<RelativeLayout android:clickable="true"
				android:padding="6dip" android:layout_height="100dip"
				android:layout_width="fill_parent" android:id="@+id/btnPing"
				android:focusable="true">
				<TextView android:textSize="4pt" android:layout_height="wrap_content"
					android:singleLine="true" android:layout_width="fill_parent"
					android:text="@string/ping_desc" android:layout_toRightOf="@+id/icon"
					android:id="@+id/secondLine" android:layout_marginLeft="10dp"
					android:layout_below="@+id/textView1" android:ellipsize="marquee"
					android:textColor="@color/text_color"></TextView>
				<ImageView android:layout_alignParentLeft="true"
					android:src="@drawable/ic_ping" android:id="@+id/icon"
					android:layout_alignParentBottom="true" android:layout_height="fill_parent"
					android:layout_width="wrap_content" android:layout_marginLeft="10dp"></ImageView>
				<TextView android:layout_marginTop="20dp" android:gravity="center_vertical"
					android:layout_alignTop="@+id/icon" android:textSize="10pt"
					android:layout_height="wrap_content" android:layout_width="fill_parent"
					android:text="@string/ping" android:layout_toRightOf="@+id/icon"
					android:id="@+id/textView1" android:layout_marginLeft="10dp"
					android:textColor="@color/text_color"></TextView>
			</RelativeLayout>
			<RelativeLayout android:clickable="true"
				android:padding="6dip" android:layout_height="100dip"
				android:layout_width="fill_parent" android:id="@+id/btnNsLookup">
				<TextView android:textSize="4pt" android:layout_height="wrap_content"
					android:singleLine="true" android:layout_width="fill_parent"
					android:text="@string/nslookup_desc" android:layout_toRightOf="@+id/icon"
					android:id="@+id/secondLine" android:layout_marginLeft="10dp"
					android:layout_below="@+id/textView1" android:ellipsize="marquee"
					android:textColor="@color/text_color"></TextView>
				<ImageView android:layout_alignParentLeft="true"
					android:src="@drawable/ic_ns_lookup" android:id="@+id/icon"
					android:layout_alignParentBottom="true" android:layout_height="fill_parent"
					android:layout_width="wrap_content" android:layout_marginLeft="10dp"></ImageView>
				<TextView android:layout_marginTop="20dp" android:gravity="center_vertical"
					android:layout_alignTop="@+id/icon" android:textSize="10pt"
					android:layout_height="wrap_content"
					android:layout_alignWithParentIfMissing="true" android:singleLine="false"
					android:layout_width="fill_parent" android:text="NS Lookup"
					android:layout_toRightOf="@+id/icon" android:id="@+id/textView1"
					android:layout_marginLeft="10dp" android:textColor="@color/text_color"></TextView>
			</RelativeLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>